--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -2,10 +2,10 @@
   align-items: center;
   background: #bb9469;
   display: flex;
-  color: black;
   padding: 20px;
+  margin-left: 135px;
+  margin-right: 135px;
   gap: 30px;
-  font-family: "Gafata", sans-serif;
   justify-content: space-between;
 }
 
@@ -20,24 +20,5 @@
 }
 
 .header__links:hover {
-  color: gray;
-  text-decoration: underline;
-}
-
-.header__home_link {
-  align-self: center;
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
-.header__home_link img {
-  height: 100%;
-  width: 36px;
-  filter: invert(100%) sepia(100%) saturate(19%) hue-rotate(255deg)
-    brightness(103%) contrast(106%);
-}
-
-.header__logo {
-  font-size: 24px;
+  color: white;
 }
