--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -7,10 +7,7 @@
 }
 
 .forms_box {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  padding-left: 80px;
-  padding-right: 80px;
+  padding: 40px;
   margin: 20px;
   background-color: #fffdd0;
   border-radius: 10px;
@@ -18,7 +15,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 40px;
+  width: 30%;
 }
 
 /* .forms_box_forms {
