--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -22,3 +22,32 @@
 .header__links:hover {
   color: white;
 }
+
+.menu {
+  display: block;
+}
+
+.menuIcon {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    flex-direction: row;
+    margin: 0;
+  }
+  .menu {
+    display: none;
+  }
+  .menuIcon {
+    display: block;
+    align-items: center;
+    cursor: pointer;
+  }
+  .header__links {
+    flex: 1;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+  }
+}
