--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -22,3 +22,27 @@
 /* .forms_box_forms {
   padding: 20px;
 } */
+
+@media screen and (max-width: 768px) {
+  .section {
+    /* background-color: yellow; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .forms_box {
+    padding: 10px;
+    margin: 10px;
+    margin-left: 10px;
+    background-color: #fffdd0;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+    width: 80%;
+  }
+}
