--- a/src/styles/Signup.module.css
+++ b/src/styles/Signup.module.css
@@ -15,7 +15,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 40px;
+  gap: 30px;
   width: 30%;
 }
 
@@ -42,6 +42,14 @@
   text-decoration: none;
 }
 
+.buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 40px;
+}
+
 @media screen and (max-width: 768px) {
   .section {
     /* background-color: yellow; */
@@ -61,27 +69,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    gap: 40px;
+    gap: 30px;
     width: 80%;
   }
 
-  .links {
+  .buttons {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    justify-content: space-between;
-  }
-
-  .links a {
-    padding-top: 3px;
-    color: black;
-    font-weight: bold;
-    text-decoration: none;
-    font-size: 8px;
-  }
-
-  .links a:hover {
-    color: gray;
-    text-decoration: none;
+    justify-content: center;
+    align-items: center;
   }
 }
