--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -1,89 +1,90 @@
 .section {
+  /* background-color: yellow; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.forms_box {
+  padding: 40px;
+  margin: 25px;
+  margin-bottom: 8px;
+  margin-top: 150px;
+  background-color: #fffdd0;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  width: 30%;
+}
+
+/* Adicione a propriedade abaixo para criar espaço entre os botões */
+.forms_box .buttons Button {
+  margin-bottom: 8px;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.links a {
+  padding-top: 3px;
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.links a:hover {
+  color: gray;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+  .section {
     /* background-color: yellow; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  
+
   .forms_box {
-    padding: 40px;
-    margin: 5px;
-    margin-top: 150px;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 10px;
     background-color: #fffdd0;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 40px;
-    width: 30%;
+    width: 80%;
   }
-  
-  /* .forms_box_forms {
-    padding: 20px;
-  } */
-  
+
   .links {
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
   }
-  
+
   .links a {
     padding-top: 3px;
     color: black;
     font-weight: bold;
     text-decoration: none;
+    font-size: 8px;
   }
-  
+
   .links a:hover {
     color: gray;
     text-decoration: none;
   }
-  
-  @media screen and (max-width: 768px) {
-    .section {
-      /* background-color: yellow; */
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-  
-    .forms_box {
-      padding: 10px;
-      margin: 10px;
-      margin-left: 10px;
-      background-color: #fffdd0;
-      border-radius: 10px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      gap: 40px;
-      width: 80%;
-    }
-  
-    .links {
-      display: flex;
-      flex-direction: row;
-      width: 100%;
-      justify-content: space-between;
-    }
-  
-    .links a {
-      padding-top: 3px;
-      color: black;
-      font-weight: bold;
-      text-decoration: none;
-      font-size: 8px;
-    }
-  
-    .links a:hover {
-      color: gray;
-      text-decoration: none;
-    }
-  }
-  
+}
