--- a/src/styles/CreateANote.module.css
+++ b/src/styles/CreateANote.module.css
@@ -1,70 +1,80 @@
 .section {
+  /* background-color: yellow; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.forms_box {
+  padding: 40px;
+  margin: 5px;
+  background-color: #fffdd0;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  width: 80%;
+}
+
+.forms_box__row {
+  display: flex;
+  justify-content: space-between;
+  gap: 60px;
+}
+/* .forms_box_forms {
+    padding: 20px;
+  } */
+
+.links {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.links a {
+  padding-top: 3px;
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.links a:hover {
+  color: gray;
+  text-decoration: none;
+}
+
+.react_quill {
+  font-family: sans-serif;
+  font-size: 16px;
+  color: #333;
+  background-color: aquamarine;
+  width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .section {
     /* background-color: yellow; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  
+
   .forms_box {
-    padding: 40px;
-    margin: 5px;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 10px;
     background-color: #fffdd0;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 40px;
-    width: 30%;
-  }
-  
-  /* .forms_box_forms {
-    padding: 20px;
-  } */
-  
-  .links {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
     justify-content: space-between;
+    gap: 40px;
+    width: 80%;
   }
-  
-  .links a {
-    padding-top: 3px;
-    color: black;
-    font-weight: bold;
-    text-decoration: none;
-  }
-  
-  .links a:hover{
-    color: gray;
-    text-decoration: none;
-  }
-  
-  
-  @media screen and (max-width: 768px) {
-
-    .section {
-      /* background-color: yellow; */
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-  
-    .forms_box {
-      padding: 10px;
-      margin: 10px;
-      margin-left: 10px;
-      background-color: #fffdd0;
-      border-radius: 10px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      gap: 40px;
-      width: 80%;
-    }
-  }
-  
+}
