alterando a cor da caixa de texto

--- a/src/styles/CreateANote.module.css
+++ b/src/styles/CreateANote.module.css
@@ -50,8 +50,8 @@
 .react_quill {
   font-family: sans-serif;
   font-size: 16px;
-  color: #333;
-  background-color: aquamarine;
+  color: #262626;
+  background-color: rgba(30, 143, 255, 0.407);
   width: 100%;
 }
 
